# terraform-snowflake-playground

./: .gitignore  .pre-commit-config.yaml  README.md  architecture.md  main.tf  new_file.md  new_file_for_test  play_administration_schema.tf  play_ground_schema.tf  variables.tf  versions.tf
.github/: contributing.md
.github/workflows/: check_python.yaml  check_python_blank.yaml  integration_tests.yaml  lint_sql.yaml  lint_sql_blank.yaml  ok-to-test.yaml  test_python.yaml  test_python_blank.yaml
code/python/: .flake8  Makefile  README.md  func_normalize_proc_names.py  pyproject.toml  test_normalize_proc_names.py
code/python/normalize_proc_names/: README.md  pyproject.toml
code/python/normalize_proc_names/normalize_proc_names/: __init__.py  normalize_proc_names.py
code/python/normalize_proc_names/tests/: test_normalize_proc_names.py
code/python/tidy_playground/: README.md  pyproject.toml
code/python/tidy_playground/tests/: expired_objects.csv  illegal_objects.csv  test_tidy_playground.py
code/python/tidy_playground/tests/snapshots/: snap_test_tidy_playground.py
code/python/tidy_playground/tidy_playground/: __init__.py  main.py  tidy_playground.py
code/sql/: Makefile  README.md  pyproject.toml
code/sql/procedures/: tidy_playground.old_sql  update_objects.sql
code/sql/views/: log_summary.sql  log_view.sql  object_ages.sql  object_tags.sql
code/sql_procedures/: tidy_playground.sql
code/sql_views/: log_summary.sql  log_view.sql
examples/basic/: README.md  main.tf  variables.tf
examples/change_playground_parameters/: README.md  main.tf
examples/complete/: .terraform.lock.hcl  main.tf  terraform.tfvars
examples/src/: README.md  main.tf
images/: .$c4-snowflake-playground.drawio.bkp  c4-snowflake-playground.drawio
playground_terraform/: Makefile  README.md  main.tf  play.tf  play_administration.tf  play_ground.tf  terraform.tfvars  tidy_playground.js  variables.tf
playground_terraform/code/: func_ normalize_proc_names.py  func_normalize_proc_names.py  proc_tidy_playground.js  proc_tidy_playground.sql
playground_terraform/code/python/: pyproject.toml  test_normalize_proc_names.py
playground_terraform/code/snapshots/: snap_test_normalize_proc_names.py
playground_terraform/code/sql_procedures/: update_objects.sql
playground_terraform/code/sql_views/: log_summary.sql  object_ages.sql  object_tags.sql
testing/: .terraform.lock.hcl  .terraformrc  Makefile  README.md  main.tf
testing/test_deployment/: .terraform.lock.hcl  Makefile  README.md  main.tf
testing/test_objects/: Makefile  README.md  main.tf  test_resources.tf  variables.tf
testing/test_script/: pyproject.toml  test_deployment.py
testing/test_script/data/: object_ages.csv
testing/test_script/snapshots/: snap_test_deployment.py
testing/tests/: Makefile  pyproject.toml  test_deployment.py
testing/tests/snapshots/: snap_test_deployment.py
