[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["James Goodhand <james.goodhand@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
