[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["James Goodhand <james.goodhand@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.0"
snowflake-snowpark-python = {extras = ["pandas"], version = "^1.1.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
snapshottest = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
