[tool.poetry]
name = "snowflake-playgrounds"
version = "0.1.0"
description = ""
authors = ["James Goodhand <james.goodhand@hey.com>"]
packages = [{include = "normalize_proc_names"}]

[tool.poetry.dependencies]
python = "3.8.*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
snapshottest = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
